--- a/Assets/styles/_contact.scss
+++ b/Assets/styles/_contact.scss
@@ -51,6 +51,9 @@
         }
        
     }
+    .btn{
+        margin: 0 auto;
+    }
 
 }
 // map section================================================================>
