--- a/Assets/styles/_landingpage.scss
+++ b/Assets/styles/_landingpage.scss
@@ -11,7 +11,7 @@ body{
     position: relative;
 }
 .container{
-    width: 70%;
+    width: 80%;
     margin: 0 auto;
     // border: 1px solid black;
 }
@@ -49,7 +49,7 @@ body{
     align-items: center;
     flex-wrap: wrap;
     padding-top: 1%;
-    border: 1px solid black;
+    
     h1{
         // margin-top: 2%;
         font-size: 50px;
@@ -82,7 +82,6 @@ body{
         display: flex;
         flex-direction: column;
         align-items: center;
-        border: 1px solid black;
         padding-top: 5%;
     
         .logotext{
@@ -168,7 +167,7 @@ Main body*/
 /*================================================================
 reuseable layouts and styles*/
 .col-1-3{
-    width: 28.9%;
+    max-width: 28.9%;
 }
 .col-1-2{
     width: 45.3%;
@@ -180,11 +179,11 @@ reuseable layouts and styles*/
     border-top: none;
     padding: 0 4% 4% 2%;
     line-height: 30px;
-    // width: 100%;
-    img{
-        size:100% 100%;
-        
+    width: 100%;
+    span{
+        font-size: 20px;
     }
+
    .detailhead{
     display: flex;
     justify-content: space-between ;
@@ -192,8 +191,21 @@ reuseable layouts and styles*/
         color: #06348C;
         font-weight: 500;
     }
+    
    }
 }
+.animate__bounce {
+    animation-duration: 2s;
+    animation-delay: 1.5s;
+}
+.animate__heartBeat{
+    @extend .animate__bounce;
+    animation-iteration-count: 3;
+    animation-delay: 6s;
+}
+
+
+
 .deal{
     position: relative;
     .discount{
@@ -302,7 +314,7 @@ Facilities*/
         text-align: center;
         background-color: #37A335;
         color: #fff;
-        border-radius: 20%;
+        border-radius: 10px;
         width: 17%;
        }
        .details{
@@ -312,14 +324,28 @@ Facilities*/
         margin-bottom: 5%;      
      }
        h3{
-        font-size: 18px;
+        margin-left: 22%;
+        font-size: 22px;
        }
-       
+       .centeredtext{
+        // border: 1px solid black;
+        width: 50%;
+        text-align: center;
+       }
+    
        .pathright{
         height: 15%; width: 25%;
        }
     }
 
+    .tick{
+        // list-style-type: none;
+        padding-left: 12%;
+        background-image: url(./images/homepage/tick1.jpeg);
+        background-size: 1em;
+        background-repeat: no-repeat;
+        margin-left: 10%;
+    }
     /*=============================================================
     Map and Contacts==============================*/
      
@@ -359,10 +385,12 @@ Facilities*/
                 margin-bottom: 10%;
                 
                 &:nth-child(5){
+                    line-height: 150%;
                     margin: 20% 0 25% 0;
                 }
             }
         }
+        
     }
 
     /*=============================================================
