--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -63,7 +63,7 @@ body {
 }
 
 .container {
-  width: 70%;
+  width: 80%;
   margin: 0 auto;
 }
 
@@ -100,7 +100,6 @@ body {
   align-items: center;
   flex-wrap: wrap;
   padding-top: 1%;
-  border: 1px solid black;
 }
 .logosection h1 {
   font-size: 50px;
@@ -126,7 +125,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid black;
   padding-top: 5%;
 }
 .logoform .logotext {
@@ -202,7 +200,7 @@ Main body*/
 /*================================================================
 reuseable layouts and styles*/
 .col-1-3 {
-  width: 28.9%;
+  max-width: 28.9%;
 }
 
 .col-1-2 {
@@ -215,9 +213,10 @@ reuseable layouts and styles*/
   border-top: none;
   padding: 0 4% 4% 2%;
   line-height: 30px;
+  width: 100%;
 }
-.details img {
-  size: 100% 100%;
+.details span {
+  font-size: 20px;
 }
 .details .detailhead {
   display: flex;
@@ -226,6 +225,20 @@ reuseable layouts and styles*/
 .details .detailhead h3 {
   color: #06348C;
   font-weight: 500;
+}
+
+.animate__bounce, .animate__heartBeat {
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
+}
+
+.animate__heartBeat {
+  -webkit-animation-iteration-count: 3;
+          animation-iteration-count: 3;
+  -webkit-animation-delay: 6s;
+          animation-delay: 6s;
 }
 
 .deal {
@@ -332,7 +345,7 @@ Facilities*/
   text-align: center;
   background-color: #37A335;
   color: #fff;
-  border-radius: 20%;
+  border-radius: 10px;
   width: 17%;
 }
 .facilities .details {
@@ -342,11 +355,24 @@ Facilities*/
   margin-bottom: 5%;
 }
 .facilities h3 {
-  font-size: 18px;
+  margin-left: 22%;
+  font-size: 22px;
+}
+.facilities .centeredtext {
+  width: 50%;
+  text-align: center;
 }
 .facilities .pathright, .facilities .deal .pathleft, .deal .facilities .pathleft {
   height: 15%;
   width: 25%;
+}
+
+.tick {
+  padding-left: 12%;
+  background-image: url(./images/homepage/tick1.jpeg);
+  background-size: 1em;
+  background-repeat: no-repeat;
+  margin-left: 10%;
 }
 
 /*=============================================================
@@ -378,6 +404,7 @@ Map and Contacts==============================*/
   margin-bottom: 10%;
 }
 .backgrd .contact li:nth-child(5) {
+  line-height: 150%;
   margin: 20% 0 25% 0;
 }
 
@@ -455,6 +482,9 @@ subscribe ==============================*/
   border-radius: 10px;
   padding: 2%;
   border: 1.5px solid grey;
+}
+.heroform .btn {
+  margin: 0 auto;
 }
 
 .location {
